# pipeline-pyspark-postgresql-streaming

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
TipoImovelTransacoes/: .part-00000-96f69ad2-792c-41b2-a7cf-e459d09cc1a1-c000.snappy.parquet.crc  part-00000-96f69ad2-792c-41b2-a7cf-e459d09cc1a1-c000.snappy.parquet
app/: main.py
app/data-files/: transacoes.csv
app/data-files-enter/output/: condominios.csv  imoveis.csv  moradores.csv
app/dataIngest/: ingest.py  streaming.py
app/dataProcess/: process.py
app/dataStorage/: storage.py
app/models/: condominio.py  imovel.py  morador.py  transacao.py
images/: .$arquitetura.drawio.bkp  Untitled Diagram.drawio  arquitetura.drawio  classes.yuml
parquet-files/MoradorTransacoes/: .part-00000-14adc164-7c03-4d5f-9d26-5aeec8fbfeb2-c000.snappy.parquet.crc  part-00000-14adc164-7c03-4d5f-9d26-5aeec8fbfeb2-c000.snappy.parquet
parquet-files/TransacoesCondominio/: .part-00000-d776ed5e-8142-43e5-963c-040d8fde79c5-c000.snappy.parquet.crc  part-00000-d776ed5e-8142-43e5-963c-040d8fde79c5-c000.snappy.parquet
parquet-files/df1/: .part-00000-efd95f45-b4c4-424c-96aa-c3090eff4398-c000.snappy.parquet.crc  part-00000-efd95f45-b4c4-424c-96aa-c3090eff4398-c000.snappy.parquet
